test/invalid-semantics/60294_if_then_not_unit/if_then_not_unit.mag
-- Author: 60294, Pedro Rosa
fun main (_): Unit -> Unit = 
    if true then 5